--- a/src/App.css
+++ b/src/App.css
@@ -195,6 +195,25 @@ select:focus {
   opacity: 0; 
 }
 
+/* aninmation click */
+.hasClick {
+  opacity: 1;
+  position: absolute;
+}
+
+.hasClickArrow {
+  opacity: 0;
+}
+
+.hasDownClick {
+  opacity: 1;
+  position: absolute;
+}
+
+.hasDownClickArrow {
+  opacity: 0;
+}
+
 /* comment */
 .commentButton {
   display: flex;
